--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,13 +1,13 @@
 {
-  "compilerOptions": {
+ "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "rootDir": "src",
     "outDir": "dist",
-    "strict": true,
+    "rootDir": "src",
+    "strict": false,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "prisma"]
